<?xml version="1.0" encoding="utf-8"?>
<!-- 
     Based on the BluetoothChat sample application
     Copyright (C) 2009 The Android Open Source Project
     Derivative work Copyright (C) 2014 Fabrice Bellamy

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ListView android:id="@+id/in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:layout_weight="1"
    />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button android:id="@+id/button_select_quick_init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick_init"
        />
        <Button android:id="@+id/button_select_at_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_command"
        />
        <Button android:id="@+id/button_select_mode_1_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_1_command"
        />
        <Button android:id="@+id/button_select_mode_2_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_2_command"
        />
        <Button android:id="@+id/button_select_mode_3_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_3_command"
        />
        </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button android:id="@+id/button_select_mode_4_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_4_command"
        />
        <Button android:id="@+id/button_select_mode_5_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_5_command"
        />
        <Button android:id="@+id/button_select_mode_6_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_6_command"
        />
        <Button android:id="@+id/button_select_mode_7_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_7_command"
        />
        <Button android:id="@+id/button_select_mode_8_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_8_command"
        />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button android:id="@+id/button_select_mode_9_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_9_command"
        />
        <Button android:id="@+id/button_select_mode_A_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_A_command"
        />
        <EditText android:id="@+id/edit_text_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
        />
        <Button android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
        />
    </LinearLayout>
</LinearLayout>
